[package]
authors = ["Daisuke Kato <kato.daisuke429@gmail.com>"]
categories = ["command-line-utilities"]
description = "A small utility to create JSON objects."
edition = "2018"
homepage = "https://github.com/dskkato/rjo"
keywords = ["json"]
license = "MIT"
name = "rjo"
readme = "README.md"
repository = "https://github.com/dskkato/rjo"
version = "0.1.5"

[badges]
appveyor = { repository = "https://github.com/dskkato/rjo" }
travis-ci = { repository = "https://github.com/dskkato/rjo" }
codecov = { repository = "https://github.com/dskkato/rjo" }
maintenance = { status = "experimental" }

[dependencies]
clap = "2.32.0"
json = "0.11.13"
