[package]
authors = ["Daisuke Kato <kato.daisuke429@gmail.com>"]
categories = ["command-line-utilities"]
description = "A small utility to create JSON objects."
edition = "2018"
exclude = ["img/*"]
homepage = "https://github.com/dskkato/rjo"
keywords = ["json"]
license = "MIT"
name = "rjo"
readme = "README.md"
repository = "https://github.com/dskkato/rjo"
version = "0.2.2"

[badges]
appveyor = { repository = "dskkato/rjo" }
travis-ci = { repository = "dskkato/rjo" }
codecov = { repository = "dskkato/rjo" }
maintenance = { status = "experimental" }

[dependencies]
clap = "2.33"
json = "0.12"
syntect = "3.3"
atty = "0.2"

[target.'cfg(windows)'.dependencies]
ansi_term = "0.12"
